# DS-agent

dsagent-main/: .gitignore  HOW_TO_SWITCH_FRAMEWORK.md  MIGRATION_GUIDE.md  README_METAGPT_VENV.md  metagpt-0.8.2-py3-none-any.whl  requirements.txt  run_dsagent.py  start_metagpt_backend.ps1  test_agent_no_rag.py  test_autogen_full.py  test_autogen_simple.py  test_decoupling.py  (+5 more)
dsagent-main-wopure/: HOW_TO_ADD_NEW_FRAMEWORK.md  LATS_UPGRADE_GUIDE.md  README.md  README_CN.md  env0110-stable.yml  environment-stable.yml  requirements-dev.txt  run_dsagent.py  smart_upgrade_metagpt.py  start_dsagent_system.py  test_agent_init.py  test_agent_no_rag.py  test_backend_init.py  test_dashscope_api.py  test_lats_core.py  test_lifespan.py  test_plan_parse.py  upgrade_metagpt.py  verify_autogen.py  verify_config.py  配置完成总结.md
dsagent-main/dsagent_core/: __init__.py  pyproject.toml
dsagent-main/dsagent_core/actions/: __init__.py  execute_code.py
dsagent-main/dsagent_core/actions/ds_agent/: conclude_res.py  extract_thought.py  query_utils.py  retrieval_exp.py  write_ds_code.py  write_ds_plan.py
dsagent-main/dsagent_core/actions/lats/: __init__.py  execute_action.py  lats_react.py
dsagent-main/dsagent_core/agents/: README_DECOUPLING.md  __init__.py  autogen_impl.py  base_agent.py  factory.py  metagpt_impl.py  standalone_impl.py
dsagent-main/dsagent_core/prompts/ds_agent/: conclusion_final_result.py  private_tool_recommand.py
dsagent-main/dsagent_core/rag/: __init__.py  schema.py
dsagent-main/dsagent_core/rag/engines/: __init__.py  customEmbeddingComparisonEngine.py  customMixture.py  customSolutionSamplesGenerate.py  customWorkflowGM.py  graphUtils.py
dsagent-main/dsagent_core/rag/engines/GraphMatching/: __init__.py  graph.py  test.py  trying.py
dsagent-main/dsagent_core/rag/retrievers/: __init__.py  base.py  customMixtureRetriever.py  hybrid_retriever.py
dsagent-main/dsagent_core/retrieval/: workflow_retriever.py
dsagent-main/dsagent_core/roles/: di_data_interpreter.py  ds_agent.py  ds_agent_stream.py  lats_react_stream.py
dsagent-main/dsagent_core/strategy/: __init__.py  ds_planner.py  ds_task_type.py  lats_react.py
dsagent-main/dsagent_core/utils/: __init__.py
(+185 files in other folders)
