[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dsagent-core"
version = "0.1.0"
description = "Framework-agnostic data science agent mechanisms with experience retrieval and tree search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DSAgent Team"}
]
keywords = ["agent", "data-science", "retrieval", "tree-search", "rag", "metagpt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
retrieval = []
search = []
metagpt = [
    "metagpt>=0.8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]
all = [
    "dsagent-core[metagpt,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/dsagent"
Documentation = "https://dsagent-core.readthedocs.io"
Repository = "https://github.com/yourusername/dsagent"
Issues = "https://github.com/yourusername/dsagent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dsagent_core*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=dsagent_core --cov-report=html --cov-report=term"
